# config-forge

./: README.md  config_gen.py  example.py  pyproject.toml
examples/: example.py
src/: config_forge.py  config_gen.py
tests/: test_config_forge.py  test_config_gen.py
